--- a/_data/awards.yml
+++ b/_data/awards.yml
@@ -14,7 +14,7 @@
     I was the lead in a group of four computer science students. We competed against several other schools and came out on top.
 - name: Outstanding Performance NSA CyberSpring Competition
   issuer: National Security Agency
-  issuer_url: https://nsa.gov
+  issuer_url: https://www.nsa.gov/
   year: 2015
   description: I competed in a live capture-the-flag hacking competition and placed in the top 30 out of 160+ competitors.
 - name: 1st Place BVU CTF
