Change slogan in meta description

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Bradley Rosenfeld
 email: thatguy@bradleyrosenfeld.com
-description: I'm a computer scientist who believes that pixels are people too
+description: Hi, I'm Bradley and I break computers.
 baseurl: ""
 url: "https://bradleyrosenfeld.com"
 
